--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,16 +1,16 @@
 name: appbar_textfield
 description: A flutter AppBar widget with a switchable textfield mainly used for search
-version: 1.0.1+1
+version: 2.0.0
 homepage: https://github.com/elgansayer/appbar_textfield.git
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
-  flutter: ">=1.17.0 <2.0.0"
+  sdk: '>=2.12.0 <3.0.0'
+  flutter: ">=1.17.0 <=2.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  circular_reveal_animation: ^1.1.5
+  circular_reveal_animation: ^2.0.0-nullsafety.1
 
 dev_dependencies:
   flutter_test:
