--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,13 +4,13 @@ version: 2.0.0
 homepage: https://github.com/elgansayer/appbar_textfield.git
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
-  flutter: ">=1.17.0 <=2.0.0"
+  sdk: '>=3.0.5 <4.0.0'
+  flutter: ">=3.10.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  circular_reveal_animation: ^2.0.0-nullsafety.1
+  circular_reveal_animation: ^2.0.1
 
 dev_dependencies:
   flutter_test:
